<resources>
    <string name="app_name">yemaAdmin</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome</string>
    <string name="enter_your_details_to_log_in">Enter your details to log in</string>
    <string name="email">Email</string>
    <string name="log_in">Log in</string>
    <string name="yema_logo">Logo of yema</string>
    <string name="group_name" translatable="false">By Miaplenou Group</string>
    <string name="enter_email">Enter your email address</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter your password</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="invalid_credentials_try_again">Invalid Credentials!! Try again.</string>
    <string name="reset_password">Reset your password</string>
    <string name="send_reset_mail">Send reset mail</string>
    <string name="a_mail_was_sent_">A mail was sent to this email address, if it exists.</string>
    <string name="add_a_new_house">Add a new house</string>
    <string name="title">Title of the house</string>
    <string name="price">Price of the house</string>
    <string name="listing_type">Listing type</string>
    <string name="house_type">House type</string>
    <string name="number_of_parking_spots">Number of parking spots</string>
    <string name="number_of_bathrooms">Number of bathrooms</string>
    <string name="number_of_bedrooms">Number of bedrooms</string>
    <string name="living_area">Living area (m²)</string>
    <string name="images_add">Images (%d / %d)</string>
    <string name="add_image">Add image</string>
    <string name="add_house">Add house</string>
    <string name="you_can_select_up_to">You can select up to %d images</string>
    <string name="location">Location of the house</string>
    <string name="field_mandatory">This field is mandatory</string>
    <string name="description">Description  about the house</string>
    <string name="requirements">Requirements</string>
    <string name="images_add_error">Add at  least one image</string>
    <string name="rental_term">Rental term</string>
    <string name="we_are_uploading_the_house_for_you">We are uploading the house for you! \nThis can take a few moment.</string>
    <string name="upload_was_successful">Upload was successful</string>
    <string name="process_failed">Whoops !! Something went wrong</string>
    <string name="process_succeeded">The house was successfully added!</string>
    <string name="review">Review</string>
    <string name="go_back">Go back</string>
    <string name="house_item_image_index">1</string>
    <string name="house_item_image_total">10</string>
    <string name="house_item_title">Duplex Home at Madjatom Quartier TOTSI 01 BP 407 LOME 01 , Lomé, Togo</string>
    <string name="house_rental_term">/%s</string>
    <string name="leave_us_a_message">Leave us a message</string>
    <string name="is_this_still_available">Is this still available?</string>
    <string name="send">Send</string>
    <string name="save_item">Add item to wishlist</string>
    <string name="save">Save</string>
    <string name="send_the_message_with_whatsapp">Send the message with whatsapp?</string>
    <string name="message">Message</string>
    <string name="share">Share</string>
    <string name="share_title">Share this house with your friends</string>
    <string name="review_description">Description</string>
    <string name="review_requirement">Requirements</string>
    <string name="review_house">Review house</string>
    <string name="generate_description_question">Do you want to generate an description for this house ?</string>
    <string name="cancel">Cancel</string>


    <string name="opportunity_message">Seize the opportunity to %1$s. Contact us for a viewing today!</string>

    <string name="contact_information">*Subject to availability. Prices may change without notice.*</string>

    <!-- House Type Strings -->
    <string name="duplex_type_header">Luxurious Duplex Living</string>
    <string name="duplex_type_description">Discover the epitome of modern living with our exquisite Duplex homes. This %1$s-bedroom, %2$s-bathroom residence offers a sophisticated and spacious environment, perfect for those who appreciate the finer things in life. With a sprawling living area of %3$s %4$s, enjoy the luxury of two levels that provide both privacy and ample room for entertaining.<br /></string>

    <string name="studio_type_header"><strong>Chic Studio Retreat</strong></string>
    <string name="studio_type_description">Introducing the perfect haven for solo living – our stylish Studio apartments. This thoughtfully designed %1$s-bathroom residence maximizes space and functionality, creating a cozy and efficient living environment. Immerse yourself in the simplicity and convenience of Studio living.<br /></string>

    <string name="apartment_type_header"><strong>Urban Apartment Living</strong></string>
    <string name="apartment_type_description">Welcome to a vibrant urban lifestyle with our contemporary Apartments. This %1$s-bedroom, %2$s-bathroom residence offers a perfect blend of modern design and convenience. Enjoy the bustling city life with a home that reflects your dynamic personality.<br /></string>

    <string name="flat_type_header"><strong>Modern Flat Living</strong></string>
    <string name="flat_type_description">Experience contemporary living in our stylish Flats. This %1$s-bedroom, %2$s-bathroom residence offers a perfect blend of comfort and convenience. With a living area of %3$s %4$s, make this Flat your urban oasis.<br /></string>

    <string name="villa_type_header"><strong>Luxurious Villa Retreat</strong></string>
    <string name="villa_type_description">Indulge in the epitome of luxury with our spacious Villas. This %1$s-bedroom, %2$s-bathroom residence is designed for those who seek elegance and tranquility. Enjoy the expansive living area of %3$s %4$s and live the villa lifestyle.<br /></string>

    <string name="semi_detached_type_header"><strong>Charming Semi-Detached Living</strong></string>
    <string name="semi_detached_type_description">Discover the charm of our Semi-detached houses. This %1$s-bedroom, %2$s-bathroom residence offers a perfect balance of privacy and community. With a living area of %3$s %4$s, experience the warmth of semi-detached living.<br /></string>

    <string name="default_type_header"><strong>Modern Home Living</strong></string>
    <string name="default_type_description">Explore the perfect blend of comfort and style in this %1$s-bedroom, %2$s-bathroom house. With a spacious living area of %3$s %4$s, this residence offers a warm and inviting atmosphere.<br /></string>

    <string name="minimalist_lifestyle">embrace a minimalist lifestyle</string>
    <string name="make_home_message">make this house your home</string>
    <string name="yes">Yes</string>
    <string name="use">Use</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="no_homes_available">No home available</string>
    <string name="house_images">Images of the house</string>
    <string name="details">Details</string>
    <string name="image_of_the_logo">Image of the logo</string>
    <string name="edit_password">Edit password</string>
    <string name="logout">Logout</string>
    <string name="confirm_logout">Are you sure you want to log out?</string>
    <string name="change_password">Change your password</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="confirm">Confirm</string>
    <string name="repeat_password">Repeat password</string>
    <string name="passwords_do_not_match">Passwords do not match.</string>
    <string name="password_must_be_at_least_6_characters_long">Password must be at least %d characters long.</string>
    <string name="password_updated_successfully">Password updated successfully</string>
    <string name="error_on_server">An error occurred on the server. Please come back later or contact the administrator!!</string>
    <string name="at">at</string>
    <string name="must_contain">Must contain : 1 Maj, 1 Min, 1 spec, 1 digit!!</string>

</resources>