<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.fragments.LoginFragment">

    <RelativeLayout
        android:id="@+id/welcome_layout"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:gravity="start"
        app:layout_constraintEnd_toEndOf="@+id/guideline_v2"
        app:layout_constraintStart_toStartOf="@id/guideline_v1"
        app:layout_constraintTop_toTopOf="@id/guideline">

        <include
            android:id="@+id/include_layout"
            layout="@layout/round_logo"
            android:layout_width="@dimen/logo_login_size"
            android:layout_height="@dimen/logo_login_size"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true" />

        <LinearLayout
            android:id="@+id/frame_58"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="12dp"
            android:layout_toEndOf="@+id/include_layout"
            android:orientation="vertical">

            <TextView
                android:id="@+id/welcome_"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:textAppearance="@style/welcome" />

            <TextView
                android:id="@+id/enter_your_"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_your_details_to_log_in"
                android:textAppearance="@style/enter_your_details_to_log" />

        </LinearLayout>

    </RelativeLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:hint="@string/email"
        app:expandedHintEnabled="true"
        app:layout_constraintEnd_toEndOf="@+id/guideline_v2"
        app:layout_constraintStart_toStartOf="@id/guideline_v1"
        app:layout_constraintTop_toBottomOf="@id/welcome_layout"
        app:placeholderText="@string/enter_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:hint="@string/password"
        app:endIconMode="password_toggle"
        app:expandedHintEnabled="true"
        app:layout_constraintEnd_toEndOf="@+id/guideline_v2"
        app:layout_constraintStart_toStartOf="@id/guideline_v1"
        app:layout_constraintTop_toBottomOf="@id/email_layout"
        app:placeholderText="@string/enter_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/invalid_credentials"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/invalid_credentials_try_again"
        android:textColor="@color/text_red_light"
        app:layout_constraintBottom_toTopOf="@id/login_btn"
        app:layout_constraintEnd_toEndOf="@id/guideline_v2"
        app:layout_constraintStart_toStartOf="@id/guideline_v1"
        app:layout_constraintTop_toBottomOf="@id/password_layout" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="24dp"
        android:background="@drawable/button_state"
        android:text="@string/log_in"
        android:textAppearance="@style/button_log_in"
        app:layout_constraintEnd_toEndOf="@id/guideline_v2"
        app:layout_constraintStart_toStartOf="@id/guideline_v1"
        app:layout_constraintTop_toBottomOf="@+id/invalid_credentials" />

    <TextView
        android:id="@+id/forgot_password_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginTop="@dimen/default_margin"
        android:gravity="center"
        android:text="@string/forgot_your_password"
        android:textAppearance="@style/forgot_password"
        app:layout_constraintEnd_toEndOf="@id/guideline_v2"
        app:layout_constraintStart_toStartOf="@id/guideline_v1"
        app:layout_constraintTop_toBottomOf="@id/login_btn" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_v1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_v2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />
</androidx.constraintlayout.widget.ConstraintLayout>