<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.fragments.login.ResetPasswordFragment">

    <RelativeLayout
        android:id="@+id/welcome_layout"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:gravity="start"
        app:layout_constraintEnd_toEndOf="@+id/guideline_v2"
        app:layout_constraintStart_toStartOf="@id/guideline_v1"
        app:layout_constraintTop_toTopOf="@id/guideline">

        <include
            android:id="@+id/include_layout"
            layout="@layout/round_logo"
            android:layout_width="@dimen/default_logo_size_44"
            android:layout_height="@dimen/default_logo_size_44"
            android:layout_alignParentTop="true"
            android:layout_marginTop="4dp" />

        <TextView
            android:id="@+id/reset_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="12dp"
            android:layout_toEndOf="@+id/include_layout"
            android:gravity="center"
            android:text="@string/reset_password"
            android:textAppearance="@style/welcome" />

    </RelativeLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:hint="@string/email"
        app:expandedHintEnabled="true"
        app:layout_constraintEnd_toEndOf="@+id/guideline_v2"
        app:layout_constraintStart_toStartOf="@id/guideline_v1"
        app:layout_constraintTop_toBottomOf="@id/welcome_layout"
        app:placeholderText="@string/enter_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/reset_password_btn"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="24dp"
        android:background="@drawable/button_state"
        android:text="@string/send_reset_mail"
        android:textAppearance="@style/button_log_in"
        app:layout_constraintEnd_toEndOf="@id/guideline_v2"
        app:layout_constraintStart_toStartOf="@id/guideline_v1"
        app:layout_constraintTop_toBottomOf="@+id/email_layout" />

    <TextView
        android:id="@+id/reset_post_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/a_mail_was_sent_"
        android:textColor="@color/text_secondary"
        app:layout_constraintEnd_toEndOf="@id/guideline_v2"
        app:layout_constraintStart_toStartOf="@id/guideline_v1"
        app:layout_constraintTop_toBottomOf="@id/reset_password_btn" />

    <TextView
        android:id="@+id/login_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/log_in"
        android:textAppearance="@style/login_text"
        app:layout_constraintEnd_toEndOf="@id/guideline_v2"
        app:layout_constraintStart_toStartOf="@id/guideline_v1"
        app:layout_constraintTop_toBottomOf="@id/reset_post_message" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_v1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_v2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />
</androidx.constraintlayout.widget.ConstraintLayout>