<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/border_dialog_confirmation"
    android:paddingBottom="20dp"
    tools:context=".views.dialogs.DefaultConfirmationDialogFragment">


    <ImageView
        android:id="@+id/closeButton"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_gravity="end|top"
        android:src="@drawable/cancel_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.955"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.091" />

    <TextView
        android:id="@+id/dialog_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="@dimen/default_margin"
        android:text="@string/description"
        android:textAppearance="@style/dialog_title"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/negative_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:backgroundTint="@color/text_secondary"
        android:padding="10dp"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/positive_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_message" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/positive_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:backgroundTint="@color/primary"
        android:padding="10dp"
        android:text="@string/yes"
        android:textAllCaps="false"
        android:textColor="@color/text_primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/negative_btn"
        app:layout_constraintTop_toBottomOf="@+id/dialog_message" />

</androidx.constraintlayout.widget.ConstraintLayout>
